istio-config/istio-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ingressgateway-connection-pool
  namespace: istio-system
spec:
  host: istio-ingressgateway.istio-system.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1000
        maxRequestsPerConnection: 100
      tcp:
        maxConnections: 1000
